<resources>
    <string name="app_name">yourWardrobe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Accedi</string>
    <string name="sign_up">Registrati</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_message">Benvenuto</string>
    <string name="registrato">Sei già registrato?</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="dressinlogin">Dressinlogin</string>
    <string name="o">o</string>
    <string name="cloudy">Cloudy</string>
    <string name="example_weather_temp">30</string>
    <string name="degree_symbol">°</string>
    <string name="home">Home</string>
    <string name="wardrobe">Wardrobe</string>
    <string name="personal_stylist">Personal stylist</string>
    <string name="avatar">Avatar</string>
    <string name="daily_outfit">Outfit del giorno</string>
    <string name="confirm_password">Conferma password</string>
    <string name="sign_up_phrase">Entra subito nel tuo wardrobe personale</string>
    <string name="vestiario">Vestiario</string>
    <string name="outfit">Outfit</string>
    <string name="magliette">Magliette</string>
    <string name="pantaloni">Pantaloni</string>
    <string name="felpe">Felpe</string>
    <string name="add_garment">Aggiungi capo</string>
    <string name="caratteristiche_principali">Caratteristiche principali</string>
    <string name="componenti_dell_outfit">Componenti dell\'outfit</string>
    <string name="compose_outfit">Componi outfit</string>
    <string name="parte_superiore">Parte superiore</string>
    <string name="parte_inferiore">Parte inferiore</string>
    <string name="accessori">Accessori</string>
    <string name="scarpe">Scarpe</string>
    <string name="ciao">"Ciao, "</string>
    <string name="ciao_guest">Ciao, ospite</string>
    <string name="username_signup">Username</string>
    <string name="season">Stagione</string>
    <string name="all_seasons">Tutte le stagioni</string>
    <string name="winter">Inverno</string>
    <string name="winter_autumn">Inverno - Autunno</string>
    <string name="spring">Primavera</string>
    <string name="spring_summer">Primavera - Estate</string>
    <string name="spring_autumn">Primavera - Autunno</string>
    <string name="summer">Estate</string>
    <string name="autumn">Autunno</string>
    <string name="seleziona_colori">Seleziona colori</string>
    <string name="color">Colore</string>
    <string name="red">Rosso</string>
    <string name="blue">Blu</string>
    <string name="green">Verde</string>
    <string name="black">Nero</string>
    <string name="yellow">Giallo</string>
    <string name="white">Bianco</string>
    <string name="pink">Rosa</string>
    <string name="purple">Viola</string>
    <string name="orange">Arancione</string>
    <string name="grey">Grigio</string>
    <string name="brown">Marrone</string>
    <string name="magenta">Magenta</string>
    <string name="beige">Beige</string>
    <string name="cyan">Ciano</string>
    <string name="silver">Argento</string>
    <string name="gold">Oro</string>
    <string name="ok">Ok</string>
    <string name="Category">Categoria</string>
    <string name="top_garment">Parte superiore</string>
    <string name="bottom_garment">Parte inferiore</string>
    <string name="accessory">Accessorio</string>
    <string name="footwear">Calzature</string>
    <string name="style_casual">Casual</string>
    <string name="style_elegant">Elegante</string>
    <string name="style_sporty">Sportivo</string>
    <string name="style_boho">Boho</string>
    <string name="style_minimalist">Minimalista</string>
    <string name="style_streetwear">Streetwear</string>
    <string name="style_vintage">Vintage</string>
    <string name="style_preppy">Preppy</string>
    <string name="style_grunge">Grunge</string>
    <string name="style_chic">Chic</string>
    <string name="style_punk">Punk</string>
    <string name="style_goth">Goth</string>
    <string name="style_artsy">Artsy</string>
    <string name="style_y2k">Y2K</string>
    <string name="style">Stile</string>
    <string name="fabric_cotton">Cotone</string>
    <string name="fabric_linen">Lino</string>
    <string name="fabric_hemp">Canapa</string>
    <string name="fabric_wool">Lana</string>
    <string name="fabric_cashmere">Cachemire</string>
    <string name="fabric_silk">Seta</string>
    <string name="fabric_viscose">Viscosa</string>
    <string name="fabric_modal">Modal</string>
    <string name="fabric_lyocell">Lyocell</string>
    <string name="fabric_polyester">Poliestere</string>
    <string name="fabric_nylon">Nylon</string>
    <string name="fabric_acrylic">Acrilico</string>
    <string name="fabric_elastane">Elastan</string>
    <string name="fabric_synthetic_leather">Pelle sintetica</string>
    <string name="fabric_fleece">Pile</string>
    <string name="tessuto">Tessuto</string>
    <string name="name">Nome</string>
    <string name="applica_modifiche">Applica modifiche</string>
    <string name="elimina_capo">Elimina capo</string>
    <string name="delete_dialog">Sei sicuro di voler eliminare questo capo? L\'azione è irreversibile.</string>
    <string name="filter_garments">Filtra vestiti</string>
    <string name="modifica">Modifica</string>
    <string name="annulla">Annulla</string>
    <string name="insert_order">Ordine di inserimento</string>
    <string name="order_by_category">Raggruppa per categoria</string>
    <string name="order_by_a_z">Ordine alfabetico (A-Z)</string>
    <string name="armadio_vuoto">Armadio vuoto</string>
    <string name="empty_wardrobe_message">Sembra che il tuo armadio sia ancora vuoto, iniziamo ad aggiungere dei vestiti?</string>
    <string name="sign_out">Esci dall\'app</string>
    <string name="item_icon">Item icon</string>
    <string name="example_item">Example item</string>
    <string name="sign_in_with_google">Accedi con Google</string>
    <string name="dont_have_an_account">Non hai un account?</string>
    <string name="have_an_account">Hai già un account?</string>
    <string name="nome_outfit">Nome outfit</string>
    <string name="subcategory">Sottocategoria</string>
    <string name="subcategory_top_tshirt">T-shirt</string>
    <string name="subcategory_top_shirt">Camicia</string>
    <string name="subcategory_top_polo">Polo</string>
    <string name="subcategory_top_sweater">Maglione</string>
    <string name="subcategory_top_cardigan">Cardigan</string>
    <string name="subcategory_top_sweatshirt">Felpa</string>
    <string name="subcategory_top_tracksuit">Tuta</string>
    <string name="subcategory_top_tanktop">Canotta</string>
    <string name="subcategory_top_top">Top</string>
    <string name="subcategory_top_blazer">Blazer</string>
    <string name="subcategory_top_jacket">Giacca</string>
    <string name="subcategory_top_coat">Cappotto</string>
    <string name="subcategory_top_parka">Parka</string>
    <string name="subcategory_top_downjacket">Piumino</string>
    <string name="subcategory_top_swimsuit">Costume da bagno</string>
    <string name="subcategory_top_eveningdress">Abito da sera</string>
    <string name="subcategory_bottom_jeans">Jeans</string>
    <string name="subcategory_bottom_trousers">Pantaloni</string>
    <string name="subcategory_bottom_chinos">Chino</string>
    <string name="subcategory_bottom_cargo">Cargo</string>
    <string name="subcategory_bottom_leggings">Leggings</string>
    <string name="subcategory_bottom_shorts">Shorts</string>
    <string name="subcategory_bottom_bermuda">Bermuda</string>
    <string name="subcategory_bottom_skirt">Gonna</string>
    <string name="subcategory_bottom_sport_tracksuit">Tuta sportiva</string>
    <string name="subcategory_accessories_scarf">Sciarpa</string>
    <string name="subcategory_accessories_hat">Cappello</string>
    <string name="subcategory_accessories_cap">Berretto</string>
    <string name="subcategory_accessories_gloves">Guanti</string>
    <string name="subcategory_accessories_belt">Cintura</string>
    <string name="subcategory_accessories_bag">Borsa</string>
    <string name="subcategory_accessories_tie">Cravatta</string>
    <string name="subcategory_accessories_watch">Orologio</string>
    <string name="subcategory_accessories_bowtie">Papillon</string>
    <string name="subcategory_accessories_socks">Calzini</string>
    <string name="subcategory_accessories_underwear">Intimo</string>
    <string name="subcategory_footwear_sneakers">Sneakers</string>
    <string name="subcategory_footwear_elegantshoes">Scarpe eleganti</string>
    <string name="subcategory_footwear_boots">Stivali</string>
    <string name="subcategory_footwear_ankleboots">Stivaletti</string>
    <string name="subcategory_footwear_sandals">Sandali</string>
    <string name="subcategory_footwear_slippers">Ciabatte</string>
    <string name="subcategory_footwear_loafers">Mocassini</string>
    <string name="subcategory_footwear_ballerinas">Ballerine</string>
    <string name="save">Salva</string>
    <string name="optional_filters">Filtri (opzionali)</string>
    <string name="season_personal_stylist">Stagione (sovrascrive meteo)</string>
    <string name="generate_outfit">Genera outfit</string>
    <string name="outfit_generated">Outfit generato</string>
    <string name="outfit_name">Nome outfit</string>
    <string name="regen">Rigenera</string>
    <string name="suggested_spring">Consigliata: Primavera</string>
    <string name="default_temperature">20°C</string>
    <string name="plus">+</string>
    <string name="select">"Seleziona "</string>
    <string name="season_2">Stagione:</string>
    <string name="aggiungi">+ Aggiungi</string>
    <string name="welcome_home">Ciao,</string>
    <string name="guest">Guest</string>
    <string name="reload_outfit">Rigenera outfit</string>
    <string name="importa_capi_dalla_galleria">Importa capi dalla galleria</string>
    <string name="salva_tutti_i_capi">Salva tutti i capi</string>
    <string name="example_email">mario@example.com</string>
    <string name="profile">Profilo</string>
    <string name="genera_outfit">Genera outfit</string>
    <string name="torna_alla_selezione">Torna alla selezione</string>
    <string name="meteo">Meteo</string>
    <string name="icon_stressed">😕</string>
    <string name="nessun_outfit_trovato_nprova_ad_aggiungere_pi_capi_al_guardaroba">Nessun outfit trovato.\nProva ad aggiungere più capi al guardaroba.</string>
    <string name="salva_questo_outfit">Salva questo outfit</string>
    <string name="salva_outfit">Salva outfit</string>
    <string name="sport">🏃 Sport</string>
    <string name="serata">✨ Serata</string>
    <string name="lavoro">💼 Lavoro</string>
    <string name="pianifica">Pianifica</string>
    <string name="aggiungi_capi_al_guardaroba_per_generare_outfit">Aggiungi capi al guardaroba per generare outfit</string>
    <string name="nessun_capo_disponibile">Nessun capo disponibile</string>
    <string name="casual">👕 Casual</string>
    <string name="occasione">Occasione</string>
    <string name="sera_21_00">🌙 Sera (21:00)</string>
    <string name="pomeriggio_15_00">☀️ Pomeriggio (15:00)</string>
    <string name="mattina_09_00">🌅 Mattina (09:00)</string>
    <string name="fascia_oraria">Fascia oraria</string>
    <string name="giorno">Giorno</string>
    <string name="scegli_giorno_fascia_oraria_e_occasione">Scegli giorno, fascia oraria e occasione</string>
    <string name="pianifica_il_tuo_outfit">Pianifica il tuo outfit</string>
    <string name="conferma">Conferma</string>
    <string name="seleziona_capi">Seleziona capi</string>
    <string name="composizione_outfit">Composizione outfit</string>
    <string name="cambia_foto_profilo">Cambia foto profilo</string>
    <string name="genera_statistiche">Statistiche</string>
    <string name="icona_vestiti">Icona vestiti</string>
    <string name="capi_totali">Capi totali</string>
</resources>